# GongMCP

./: .env.example  .gitignore  HOW_TO_SHARE.md  INSTALL.md  INSTALL_TESTS.md  MANIFEST.in  PACKAGING.md  QUICK_PACKAGING.md  README.md  RUN_TESTS.md  TEST_IMPLEMENTATION_GUIDE.md  TEST_PLAN.md  TEST_SUITE_SUMMARY.md  claude_desktop_config.json.example  coverage.xml  pyproject.toml  run_tests.sh  validate_tests.py  verify_package.sh
install/: CURSOR_SETUP.md  HOW_TO_SHARE.md  INSTALL.md  PACKAGING.md  install.bat  install.sh
src/gong_mcp/: __init__.py  gong_client.py  server.py
src/gong_mcp/analysis/: __init__.py  jobs.py  router.py  runner.py
src/gong_mcp/tools/: __init__.py  analysis.py  calls.py  participants.py
src/gong_mcp/utils/: __init__.py  filters.py  formatters.py
tests/: README.md  __init__.py  conftest.py  conftest.py.example
tests/e2e/: __init__.py  test_mcp_workflows.py
tests/integration/: __init__.py  test_tools_analysis.py  test_tools_calls.py  test_tools_participants.py
tests/unit/: __init__.py  test_filters.py  test_formatters.py  test_gong_client.example.py  test_gong_client.py  test_jobs.py  test_router.py
