[project]
name = "gong-mcp"
version = "0.1.0"
description = "MCP server for Gong call data with smart analysis routing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["mcp", "gong", "claude", "api", "calls", "transcripts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
gong-mcp = "gong_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gong_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/INSTALL.md",
    "/LICENSE",
    "/.env.example",
    "/claude_desktop_config.json.example",
    "/install.sh",
    "/install.bat",
    "/MANIFEST.in",
    "/pyproject.toml",
]
exclude = [
    "/.env",
    "/.env.*",
    "/*.key",
    "/*.pem",
    "/*.secret",
    "/secrets.json",
    "/config.json",
    "/claude_desktop_config.json",
    "/venv",
    "/env",
    "/.venv",
    "/dist",
    "/build",
    "/.pytest_cache",
    "/htmlcov",
    "/.coverage",
    "/jobs/*.json",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.27.0",
    "freezegun>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=gong_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
]
